--- a/src/app/pages/contact-edit-page/contact-edit-page.component.html
+++ b/src/app/pages/contact-edit-page/contact-edit-page.component.html
@@ -1,15 +1,16 @@
 <section class="contact-edit">
-    <h2>{{'Add'}} Contact</h2>
-    <form (ngSubmit)="onSaveContact()">
-        <label for="name">Name</label>
-        <input [(ngModel)]="contact.name" type="text" name="name" id="name">
-
-        <label for="email">Email</label>
-        <input [(ngModel)]="contact.email" type="text" name="email" id="email">
-
-        <label for="phone">Phone</label>
-        <input [(ngModel)]="contact.phone" type="text" name="phone" id="phone"> 
-
-        <button>Save</button>
+    <h2>{{ 'Add' }} Contact</h2>
+    <form [formGroup]="contactForm" (ngSubmit)="onSaveContact()">
+      <label for="name">Name</label>
+      <input formControlName="name" type="text" id="name">
+  
+      <label for="email">Email</label>
+      <input formControlName="email" type="text" id="email">
+  
+      <label for="phone">Phone</label>
+      <input formControlName="phone" type="text" id="phone">
+  
+      <button type="submit" [disabled]="!contactForm.valid">Save</button>
     </form>
-</section>
+  </section>
+  
