--- a/src/app/pages/contact-edit-page/contact-edit-page.component.scss
+++ b/src/app/pages/contact-edit-page/contact-edit-page.component.scss
@@ -19,6 +19,12 @@
         label {
             margin-top: 1em;
         }
+        .error-message {
+            color: red;
+            font-size: 0.8em;
+            margin-top: 0.5em;
+          }
+      
 
         button {
             width: 50%;
