F/add signup+get logdin user

--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -1,12 +1,15 @@
 <header class="container">
-    <div>
-        <h1 class="logo">BitWallet</h1>
+    <div class="logo">
+        <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+            <h1 >BitWallet</h1>
+        </a>
     </div>
     <nav>
         <div>
             <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><img class="home" src="../../../assets/imgs/home.png" alt=""></a>
             <a routerLink="/contact" routerLinkActive="active"><img class="home" src="../../../assets/imgs/users.png" alt=""></a>
             <a routerLink="/statistics" routerLinkActive="active"><img class="home" src="../../../assets/imgs/increase.png" alt=""></a>
+            <a routerLink="/signup" routerLinkActive="active">SignUp</a>
         </div>
 
     </nav>
