--- a/src/app/cmps/contact-list/contact-list.component.scss
+++ b/src/app/cmps/contact-list/contact-list.component.scss
@@ -1,6 +1,6 @@
 .pet-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     gap: 30px;
 }
