--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -5,13 +5,38 @@
         </a>
     </div>
     <nav>
-        <div >
-            <a [routerLink]="['/home', userId]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-                <img class="home" src="../../../assets/imgs/home.png" alt="">
-            </a>            
-            <a routerLink="/contact" routerLinkActive="active"><img class="home" src="../../../assets/imgs/users.png" alt=""></a>
-            <a routerLink="/statistics" routerLinkActive="active"><img class="home" src="../../../assets/imgs/increase.png" alt=""></a>
-            <a routerLink="/signup" routerLinkActive="active">SignUp</a>
+        <div clas >
+            <div>
+                <div>
+                    <a [routerLink]="['/home', userId]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                        <img class="home" src="../../../assets/imgs/home.png" alt="">
+                    </a>  
+                </div>
+                <div>
+                    <a routerLink="/contact" routerLinkActive="active"><img class="home" src="../../../assets/imgs/users.png" alt=""></a>
+
+                </div>
+               
+            </div>
+            
+            <!-- <div>
+            </div>
+            <div>
+            </div> -->
+            <div>
+                <div>
+                    
+                    <a routerLink="/statistics" routerLinkActive="active"><img class="home" src="../../../assets/imgs/stats.png" alt=""></a>
+                </div>
+                <div>
+                    <a routerLink="/signup" routerLinkActive="active"><img class="home" src="../../../assets/imgs/log.png" alt=""></a>
+                </div>
+            </div>
+
+                      
+           
+           
+           
         </div>
 
     </nav>
