--- a/src/app/cmps/app-header/app-header.component.scss
+++ b/src/app/cmps/app-header/app-header.component.scss
@@ -8,6 +8,7 @@ header {
     color: whitesmoke;
     margin-bottom: 30px;
     font-size: 1.2em;
+    padding: 15px;
 
     .logo {
         flex-grow: 1;
@@ -21,13 +22,13 @@ header {
         }
         h1{
             font-size: 40px;
-            margin: 20px;
+            // margin: 20px;
             color: whitesmoke;
         }
     }
 
     nav {
-        margin-left: 20px;
+        // margin-left: 20px;
         a {
             font-size: 20px;
             text-decoration: none;
@@ -48,4 +49,5 @@ header {
 .home{
     height: 2em;
     width: 2em;
+    gap: 5px;
 }
