F/add moves logic

--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -1,6 +1,6 @@
 <header class="container">
     <div class="logo">
-        <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+        <a [routerLink]="['/home', userId]"  routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
             <h1 >BitWallet</h1>
         </a>
     </div>
