--- a/src/app/cmps/contact-preview/contact-preview.component.html
+++ b/src/app/cmps/contact-preview/contact-preview.component.html
@@ -6,6 +6,7 @@
         <section class="actions" >
             <button (click)="onRemoveContact()" class="remove-btn"><img class="del" src="../../../assets/imgs/delete.png" alt=""></button>
             <a  [routerLink]="['/contact/edit',contact._id]"><button class="edit-btn">📝</button></a>
+            <a [routerLink]="['transfer', contact._id]" class="transfer-btn"><img class="del" src="../../../assets/imgs/transaction.png" alt=""></a>
         </section>
         
         
