--- a/src/app/pages/transfer-fund/transfer-fund.component.scss
+++ b/src/app/pages/transfer-fund/transfer-fund.component.scss
@@ -1,4 +1,4 @@
-.contact-edit {
+.transfer {
     height: 50vh;
     width: 50vw;
     position: fixed;
@@ -32,4 +32,8 @@
             margin: 20px auto;
         }
     }
+}
+.msg{
+    color: red;
+    font-size: 50px;
 }
