--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,19 +1,23 @@
-<!-- home-page.component.html -->
+<main *ngIf="user$ | async as user" class="container">
+  <div class="info" *ngIf="user.coins !== null && rate !== null">
+    <img class="photo" src="https://robohash.org/{{user!._id}}?set=set8" alt="">
+    <p><b>Hello: {{ user.name }}!</b></p>
 
-
-<!-- Displaying user coins and Bitcoin rate -->
-<main *ngIf="user$|async as user" class="container">
-  <div class="info" *ngIf="coins !== null && rate !== null">
-    <p><b>Hello : {{ user.name }} !</b></p>
     <div class="coin">
       <img src="../../../assets/imgs/coins.png" alt="">
-      <p><b>{{ user.name }} Coins : </b>{{ coins }}</p>
+      <p><b>{{ user.name }} Coins:</b> {{ user.coins }}</p>
     </div>
     <div class="coin">
       <img src="../../../assets/imgs/bitcoin.png" alt="">
-      <p><b>Bitcoin Rate : </b> {{ rate }}</p>
+      <p><b>Bitcoin Rate:</b> {{ rate }}</p>
     </div>
   </div>
-  <!-- <app-contact-page></app-contact-page> -->
-  <!-- <app-statistic-page></app-statistic-page> -->
+
+  <div *ngIf="user.moves.length > 0">
+    <h3><b>Your Moves :</b> </h3>
+    <app-moves-list  *ngFor="let move of userMoves"
+    [move]="move">
+     
+    </app-moves-list>
+  </div>
 </main>
