--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -5,17 +5,17 @@
         </a>
     </div>
     <nav>
-        <div clas >
+        <div class="nav-container" >
             <div>
-                <div>
+                <!-- <div> -->
                     <a [routerLink]="['/home', userId]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
                         <img class="home" src="../../../assets/imgs/home.png" alt="">
                     </a>  
-                </div>
-                <div>
+                <!-- </div> -->
+                <!-- <div> -->
                     <a routerLink="/contact" routerLinkActive="active"><img class="home" src="../../../assets/imgs/users.png" alt=""></a>
 
-                </div>
+                <!-- </div> -->
                
             </div>
             
@@ -24,13 +24,13 @@
             <div>
             </div> -->
             <div>
-                <div>
+                <!-- <div> -->
                     
                     <a routerLink="/statistics" routerLinkActive="active"><img class="home" src="../../../assets/imgs/stats.png" alt=""></a>
-                </div>
-                <div>
+                <!-- </div> -->
+                <!-- <div> -->
                     <a routerLink="/signup" routerLinkActive="active"><img class="home" src="../../../assets/imgs/log.png" alt=""></a>
-                </div>
+                <!-- </div> -->
             </div>
 
                       
