--- a/src/app/cmps/moves-list/moves-list.component.html
+++ b/src/app/cmps/moves-list/moves-list.component.html
@@ -1,6 +1,7 @@
 
-
+<section class="moves">
 <p><b>From:</b> {{ move.from }}</p>
 <p><b>To:</b> {{ move.to }}</p>
 <p><b>Coins:</b> {{ move.coins }}</p>
 <p><b>Date:</b> {{ move.at | date: 'medium' }}</p>
+</section>
