--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,4 +1,5 @@
 <Section class="signup-page">
+  <img src="../../../assets/imgs/bitcoin.png" alt="">
     <h3>Please enter your name</h3>
     <form (ngSubmit)="onSubmit()">
       <input type="text" placeholder="Enter your name" [(ngModel)]="userName" name="userName">
