--- a/src/app/cmps/contact-preview/contact-preview.component.html
+++ b/src/app/cmps/contact-preview/contact-preview.component.html
@@ -1,7 +1,7 @@
 <section class="contact-preview">
     <section class="info">
         <a [routerLink]="['/details',contact._id]" class="data">
-            <p><b> Name : </b>{{contact.name}}</p>
+            <p><b></b>{{contact.name}}</p>
         </a>
         <section class="actions" >
             <button (click)="onRemoveContact()" class="remove-btn"><img class="del" src="../../../assets/imgs/delete.png" alt=""></button>
