--- a/src/app/pages/contact-details-page/contact-details-page.component.scss
+++ b/src/app/pages/contact-details-page/contact-details-page.component.scss
@@ -18,7 +18,7 @@
 
   p {
     margin: 8px 0;
-    font-size: 26px;
+    font-size: 1.7em;
 
     &:first-child {
       font-weight: bold;
@@ -44,6 +44,8 @@
   color: white;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-top: 1em;
+  margin-bottom: 4em;
 
   &:hover {
     background-color: #dde4eb;
