--- a/src/app/pages/contact-edit-page/contact-edit-page.component.scss
+++ b/src/app/pages/contact-edit-page/contact-edit-page.component.scss
@@ -12,19 +12,22 @@
     flex-direction: column;
     align-items: center;
     padding: 50px;
+    z-index: 999;
 
     form {
         display: flex;
         flex-direction: column;
+
         label {
             margin-top: 1em;
         }
+
         .error-message {
             color: red;
             font-size: 0.8em;
             margin-top: 0.5em;
-          }
-      
+        }
+
 
         button {
             width: 50%;
