--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -3,7 +3,7 @@
   <router-outlet></router-outlet> <!-- Child routes will be loaded here -->
   <div class="add-container">
 
-    <a class="add-btn" routerLink="/contact/edit">Add Contact</a>
+    <a appEvStop class="add-btn" routerLink="/contact/edit">Add Contact</a>
   </div>
   <app-contact-filter></app-contact-filter>
 </main>
