--- a/src/app/cmps/app-header/app-header.component.html
+++ b/src/app/cmps/app-header/app-header.component.html
@@ -1,44 +1,24 @@
 <header class="container">
     <div class="logo">
-        <a [routerLink]="['/home', userId]"  routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-            <h1 >BitWallet</h1>
+        <a [routerLink]="['/home', userId]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+            <h1>BitWallet</h1>
         </a>
     </div>
     <nav>
-        <div class="nav-container" >
+        <div class="nav-container">
             <div>
-                <!-- <div> -->
-                    <a [routerLink]="['/home', userId]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-                        <img class="home" src="../../../assets/imgs/home.png" alt="">
-                    </a>  
-                <!-- </div> -->
-                <!-- <div> -->
-                    <a routerLink="/contact" routerLinkActive="active"><img class="home" src="../../../assets/imgs/users.png" alt=""></a>
-
-                <!-- </div> -->
-               
-            </div>
-            
-            <!-- <div>
+                <a [routerLink]="['/home', userId]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                    <img class="home" src="../../../assets/imgs/home.png" alt="">
+                </a>
+                <a routerLink="/contact" routerLinkActive="active"><img class="home"
+                        src="../../../assets/imgs/users.png" alt=""></a>
             </div>
             <div>
-            </div> -->
-            <div>
-                <!-- <div> -->
-                    
-                    <a routerLink="/statistics" routerLinkActive="active"><img class="home" src="../../../assets/imgs/stats.png" alt=""></a>
-                <!-- </div> -->
-                <!-- <div> -->
-                    <a routerLink="/signup" routerLinkActive="active"><img class="home" src="../../../assets/imgs/log.png" alt=""></a>
-                <!-- </div> -->
+                <a routerLink="/statistics" routerLinkActive="active"><img class="home"
+                        src="../../../assets/imgs/stats.png" alt=""></a>           
+                <a routerLink="/signup" routerLinkActive="active"><img class="home" src="../../../assets/imgs/log.png"
+                        alt=""></a>
             </div>
-
-                      
-           
-           
-           
         </div>
-
     </nav>
-    <!-- <h1>Users</h1> -->
 </header>
