--- a/src/app/pages/transfer-fund/transfer-fund.component.html
+++ b/src/app/pages/transfer-fund/transfer-fund.component.html
@@ -8,7 +8,7 @@
         <button>Transfer coins</button>
     </form>
 </section> -->
-<section class="transfer">
+<section (appClickOutside)="onClose()" class="transfer">
     <img src="../../../assets/imgs/bitcoin.png" alt="">
     <h2><b> Transfer to :</b>{{contact.name}} </h2>
     <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
