--- a/src/app/pages/transfer-fund/transfer-fund.component.scss
+++ b/src/app/pages/transfer-fund/transfer-fund.component.scss
@@ -12,6 +12,7 @@
     flex-direction: column;
     align-items: center;
     padding: 50px;
+    z-index: 999;
 
     form {
         display: flex;
