F/mobile design fixes

--- a/src/app/pages/contact-edit-page/contact-edit-page.component.scss
+++ b/src/app/pages/contact-edit-page/contact-edit-page.component.scss
@@ -36,3 +36,16 @@
         }
     }
 }
+@media (max-width: 600px) {
+    .contact-edit {
+        form{
+            input{
+                width: 15em;
+            }
+        }
+        p {
+            font-size: 1.5em;
+        }
+    }
+
+}
