--- a/src/app/pages/contact-details-page/contact-details-page.component.scss
+++ b/src/app/pages/contact-details-page/contact-details-page.component.scss
@@ -10,7 +10,6 @@
   gap: 20px;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
-  margin-top: 20px;
   border-radius: 8px;
   padding: 20px;
   margin-bottom: 20px;
@@ -27,6 +26,9 @@
     span {
       color: #555;
     }
+  }
+  .email{
+    font-size: 1.4em;
   }
 
   img {
